# eperl

./: ANNOUNCE  ANNOUNCE.ADDR  CREDITS  ChangeLog  HEADER.html  INSTALL  INSTALL.APACHE  INSTALL.NSAPI  KNOWN.BUGS  LICENSE  Makefile.PL  Makefile.in  NEWS  PORTING  PORTING.test  README  TODO  VERSIONS  ac.h.in  acconfig.h  aclocal.m4  config_ac.h.in  config_sc.h.in  configure  configure.in  eperl.1  eperl.c  eperl.h  eperl.pod  eperl_config.c  eperl_config.h  eperl_debug.c  eperl_getopt.c  eperl_getopt.h  eperl_global.h  eperl_http.c  eperl_lib.c  eperl_lib.h  eperl_license.c  eperl_log.c  (+14 more)
aux/: newvers
contrib/pkg/: 00README
contrib/pkg/bnp/: Build.eperl
contrib/pkg/fbsdpkg/eperl/: Makefile
contrib/pkg/fbsdpkg/eperl/files/: md5
contrib/pkg/fbsdpkg/eperl/pkg/: DESCR  PLIST
contrib/pkg/fbsdpkg/p5-ePerl/: Makefile
contrib/pkg/fbsdpkg/p5-ePerl/files/: md5
contrib/pkg/fbsdpkg/p5-ePerl/pkg/: COMMENT
contrib/pkg/rpm/: Makefile  eperl.spec
contrib/utils/: 00README
doc/: about.ps  about.txt  faq.ps  faq.txt
eg/: 00README  demo-01.phtml  demo-03.phtml  demo-04.phtml  demo-05.phtml  demo-06.phtml  demo-07.phtml  demo-08.phtml  demo.cgipm.iphtml  demo.cgipm.phtml  demo.env.phtml  demo.error.phtml  demo.errout.phtml  demo.errsyn.iphtml  demo.errsyn.phtml  demo.func.iphtml  demo.func.phtml  demo.html.iphtml  demo.html.phtml  demo.image.iphtml  demo.image.phtml  demo.lwp.iphtml  demo.net.iphtml  demo.net.phtml  demo.pp.iphtml  demo.pp.phtml  demo.table.iphtml  demo.table.phtml
etc/: newvers
mod/: MANIFEST
mod/Apache/: ePerl.pm
mod/Parse/: MANIFEST  README  ePerl.pm  ePerl.xs
mod/Parse/t/: 02_preprocess.t  04_compile.t  05_evaluate.t
sample/: demo-02.phtml  demo-03.phtml
t/: 02-empty.t  03-mode_filter.t  04-mode_cgi.t  05-mode_nphcgi.t  08_preprocessor.t  Makefile
