dnl #
dnl #  configure.in -- GNU autoconf configuration spec
dnl #  Copyright (c) Ralf S. Engelschall, <rse@en.muc.de>
dnl #
dnl #  Process this file with ``autoconf'' to produce a configure script.
dnl #

AC_PREREQ(2.3)dnl
AC_REVISION($Revision: 1.12$)

AC_INIT(README)
AC_CONFIG_HEADER(ac.h)dnl
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIGURE_PART(CHECK: C/C++ Compiler)
AC_PROG_CC
AC_PROG_CPP

AC_SET_MAKE
AC_PROG_INSTALL
INSTALL_DATA='${INSTALL} -m 664'
INSTALL_PROGRAM="${INSTALL_PROGRAM} -s"
AC_PATH_PROGS(PATH_BOURNESHELL, bash sh, /bin/sh) 

AC_MSG_CHECKING([for (latest) Perl])
TMPFILE=/tmp/x
for dir in `echo $PATH | sed -e 's/:/ /g'`; do
    for perl in perl5 perl perl4; do
         if test -f "$dir/$perl"; then
			 perl="$dir/$perl"
			 version=`$perl -v | grep version | sed -e 's/.* version //' -e 's/ with.*//'`
			 versionnum="`echo $version | sed -e 's/\.//g'`"
			 echo "$versionnum $version $perl" >>$TMPFILE
		 fi
	done
done
perlvers="`cat $TMPFILE | sort -u | tail -1 | cut '-d ' -f2`"
perlprog="`cat $TMPFILE | sort -u | tail -1 | cut '-d ' -f3`"
rm $TMPFILE
PATH_PERL=$perlprog
AC_MSG_RESULT([$perlprog v$perlvers])
AC_SUBST(PATH_PERL)

AC_CONFIGURE_PART(CHECK: C/C++ Dependencies)
AC_CONST
AC_STDC_HEADERS
AC_HAVE_HEADERS(stdio.h stddef.h string.h stdlib.h)


AC_UVAR_INIT
AC_UVAR_VERB([dnl
#   Imported pathes of the GNU ``configure'' command line:
#            --srcdir=<srcdir>
#            --prefix=<prefix>
#       --exec-prefix=<exec_prefix>
#   These are used in the above definitions.
#
])dnl
AC_UVAR_SETQUOTE(srcdir, $srcdir)
AC_UVAR_SETCHKQUOTE(prefix, $prefix)
AC_UVAR_SETCHKQUOTE(exec_prefix, $prefix)
AC_UVAR_VERB([dnl

#   Actual installation pathes, Part I [NO EDIT NECESSARY]
#
#   Given default values are the exact pathes as recommended
#   by Richard Stallman in his paper ``GNU Coding Standards'',
#   as of 28 March 1994.
#
#   If these GNU installation pathes do not fit your
#   individual needs, feel free to edit the given values!!
#   But remember: than your Push installation is no longer
#                 compliant to the GNU standards.
#
])dnl
AC_UVAR_SET(bindir,        $exec_prefix/bin)
AC_UVAR_SET(libdir,        $exec_prefix/lib)
AC_UVAR_SET(datadir,       $prefix/var)
AC_UVAR_SET(statdir,       $prefix/lib)
AC_UVAR_SET(includedir,    $prefix/include)
AC_UVAR_SET(oldincludedir, /usr/include)
AC_UVAR_SET(mandir,        $prefix/man/man1)
dnl AC_UVAR_SET(man1dir,       $prefix/man/man1)
dnl AC_UVAR_SET(man2dir,       $prefix/man/man2)
dnl AC_UVAR_SET(man3dir,       $prefix/man/man3)
dnl AC_UVAR_SET(man4dir,       $prefix/man/man4)
dnl AC_UVAR_SET(man5dir,       $prefix/man/man5)
dnl AC_UVAR_SET(man6dir,       $prefix/man/man6)
dnl AC_UVAR_SET(man7dir,       $prefix/man/man7)
dnl AC_UVAR_SET(man8dir,       $prefix/man/man8)
AC_UVAR_SET(manext,        .1)
dnl AC_UVAR_SET(man1ext,       .1)
dnl AC_UVAR_SET(man2ext,       .2)
dnl AC_UVAR_SET(man3ext,       .3)
dnl AC_UVAR_SET(man4ext,       .4)
dnl AC_UVAR_SET(man5ext,       .5)
dnl AC_UVAR_SET(man6ext,       .6)
dnl AC_UVAR_SET(man7ext,       .7)
dnl AC_UVAR_SET(man8ext,       .8)
AC_UVAR_VERB([dnl

#   Actual installation pathes, Part II [NO EDIT NECESSARY]
#
#   The following pathes are GenOpt pathes and
#   are additionally used by the Push installation.
#
#   These are not predefined by the GNU standard but
#   used by the author for a long time.
#
])dnl
AC_UVAR_SET(pkgdir,        $prefix)
AC_UVAR_SET(infodir,       $prefix/info)
AC_UVAR_SET(xaddir,        $prefix/xad)
AC_UVAR_SET(tmpdir,        /tmp)
AC_UVAR_OUTPUT


AC_CONFIGURE_PART(RESULT: Sourcefile Substitution)
AC_OUTPUT(dnl
Makefile dnl
,dnl
)dnl

echo ""
echo "Now please type 'make' to compile. Good luck."
echo ""

dnl ##EOF##
