dnl #
dnl #  configure.in -- GNU autoconf configuration spec
dnl #  Copyright (c) Ralf S. Engelschall, <rse@en.muc.de>
dnl #
dnl #  Process this file with ``autoconf'' to produce a configure script.
dnl #

AC_PREREQ(2.10)dnl
AC_REVISION($Revision: 1.12$)
echo "Configuring for ePerl `./etc/newvers -l c -d eperl_version.c`"

AC_CONFIG_AUX_DIR(etc)
AC_INIT(README)
AC_CONFIG_HEADER(config_ac.h)dnl
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIGURE_PART(CHECK: Build Tools)
AC_PROG_CC
AC_PROG_CPP

AC_MSG_CHECKING(for logfile support)
AC_ARG_ENABLE(logfile,dnl
[  --enable-logfile        to enable the security logfile],
if test $enable_logfile = yes; then
    logfile="$prefix/lib/eperl.log" 
else
    logfile="$enable_logfile"
fi
x="enabled ($logfile)"
,
logfile=""
x=disabled
)dnl
AC_SUBST(logfile)
AC_MSG_RESULT([$x])


dnl AC_MSG_CHECKING(for CGI brainfile support)
dnl AC_ARG_ENABLE(brainfile,dnl
dnl [  --enable-brainfile      to enable the global brain file],
dnl if test $enable_brainfile = yes; then
    dnl brainfile="$prefix/lib/eperl.cgi.brain" 
dnl else
    dnl brainfile="$enable_brainfile"
dnl fi
dnl x="enabled ($brainfile)"
dnl ,
dnl brainfile=""
dnl x=disabled
dnl )dnl
dnl AC_SUBST(brainfile)
dnl AC_MSG_RESULT([$x])

AC_MSG_CHECKING(for compilation debug mode)
AC_ARG_ENABLE(debug,dnl
[  --enable-debug          to enable the debugging options for compilation],
x="enabled"
CFLAGS="-Wall -g -ggdb3"
LDFLAGS="-g -ggdb3"
debug=on
AC_DEFINE(DEBUG_ENABLED)
,
x=disabled
CFLAGS="-O2"
LDFLAGS=""
debug=off
)dnl
AC_SUBST(debug)
AC_MSG_RESULT([$x])

if test "$debug" = "on"; then
    AC_MSG_CHECKING(for dmalloc library)
	dmalloc=""
    x=no
    if test -f /sw/include/dmalloc.h; then
        if test -f /sw/shlib/libdmalloc.a; then
		    AC_DEFINE(HAVE_DMALLOC)
		    CFLAGS="$CFLAGS -I/sw/include"
		    LDFLAGS="$LDFLAGS -L/sw/shlib"
			dmalloc="-ldmalloc"
		    x=yes
        fi
    fi
	AC_SUBST(dmalloc)
    AC_MSG_RESULT([$x])
fi

dnl AC_PROG_RANLIB
dnl AC_PROGRAM_CHECK(AR, ar, ar,)
dnl if test -z "$AR"; then
dnl AC_ERROR([required program ``ar'' not found])
dnl fi
AC_SET_MAKE
AC_PROG_INSTALL
INSTALL_DATA='${INSTALL} -m 664'
INSTALL_PROGRAM="${INSTALL_PROGRAM} -s"
AC_PATH_PROGS(PATH_BOURNESHELL, bash sh, /bin/sh) 

AC_CONFIGURE_PART(CHECK: Perl Language)
AC_MSG_CHECKING([for Perl language])
AC_ARG_WITH(perl,dnl
[  --with-perl             force the usage of a specific installed Perl],
perlprog=$with_perl
perlvers=`$perlprog -v | grep version | sed -e 's/.* version //' -e 's/ with.*//'`
,
TMPFILE=/tmp/x
rm -f $TMPFILE
touch $TMPFILE
c=0
for dir in `echo $PATH | sed -e 's/:/ /g'` /tmp; do
    for perl in perl5 perl miniperl; do
         if test -f "$dir/$perl"; then
             perl="$dir/$perl"
             version=`$perl -v | grep version | sed -e 's/.* version //' -e 's/ with.*//'`
             versionnum="`echo $version | sed -e 's/\.//g' -e 's/_//g'`"
             versionnum=`expr $versionnum - $c`
             echo "$versionnum $version $perl" >>$TMPFILE
         fi
    done
    c=`expr $c + 1`
done
perlvers="`cat $TMPFILE | sort -u | tail -1 | cut '-d ' -f2`"
perlprog="`cat $TMPFILE | sort -u | tail -1 | cut '-d ' -f3`"
rm -f $TMPFILE
)dnl
PATH_PERL=$perlprog
AC_MSG_RESULT([$perlprog v$perlvers])
case $perlvers in
    5.003* | 5.004* | 5.005* | 5.006* ) ;;
	* ) AC_ERROR([latest Perl found is $perlvers, but at least Perl 5.003 is required.])
esac
AC_SUBST(PATH_PERL)
AC_SUBST(perlprog)
AC_SUBST(perlvers)
if test -f $PATH_PERL; then
	:
else
    AC_ERROR([required program ``perl'' not found])
fi

AC_MSG_CHECKING([for Perl architecture directory])
perlarch="`$perlprog -e 'use Config; print $Config{archlib}'`";
AC_MSG_RESULT([$perlarch])
AC_SUBST(perlarch)

AC_MSG_CHECKING([for Perl library files])
perllibs="`$perlprog -e 'use Config; print $Config{ldflags}'`";
perllibs="$perllibs `$perlprog -e 'use Config; print $Config{libs}'`"
AC_MSG_RESULT([$perllibs])
AC_SUBST(perllibs)

AC_MSG_CHECKING([for Perl DynaLoader support])
usedl="`$perlprog -e 'use Config; print $Config{usedl}'`";
case $usedl in
    define )
	    rc=yes
        AC_DEFINE(HAVE_PERL_DYNALOADER)
		perldla=$perlarch/auto/DynaLoader/DynaLoader.a
		;;
	* )
	    rc=no
		perldla=
		;;
esac
AC_SUBST(perldla)
AC_MSG_RESULT([$rc])

AC_MSG_CHECKING([for Perl DynaLoader compilation flags])
perlccdlflags="`$perlprog -e 'use Config; print $Config{ccdlflags}'`";
AC_MSG_RESULT([$perlccdlflags])
AC_SUBST(perlccdlflags)


AC_CONFIGURE_PART(CHECK: Header and Libraries)
AC_CONST
AC_STDC_HEADERS
AC_HAVE_HEADERS(stdio.h stddef.h string.h stdlib.h)
AC_CHECK_TYPE(bool, char)
AC_CHECK_FUNCS(memmove)


AC_UVAR_INIT
AC_UVAR_VERB([dnl
#   Imported pathes of the GNU ``configure'' command line:
#            --srcdir=<srcdir>
#            --prefix=<prefix>
#       --exec-prefix=<exec_prefix>
#   These are used in the above definitions.
#
])dnl
AC_UVAR_SETQUOTE(srcdir, $srcdir)
AC_UVAR_SETCHKQUOTE(prefix, $prefix)
AC_UVAR_SETCHKQUOTE(exec_prefix, $prefix)
AC_UVAR_VERB([dnl

#   Actual installation pathes, Part I [NO EDIT NECESSARY]
#
#   Given default values are the exact pathes as recommended
#   by Richard Stallman in his paper ``GNU Coding Standards'',
#   as of 28 March 1994.
#
#   If these GNU installation pathes do not fit your
#   individual needs, feel free to edit the given values!!
#   But remember: than your Push installation is no longer
#                 compliant to the GNU standards.
#
])dnl
AC_UVAR_SET(bindir,        $exec_prefix/bin)
AC_UVAR_SET(libdir,        $exec_prefix/lib)
AC_UVAR_SET(datadir,       $prefix/var)
AC_UVAR_SET(statdir,       $prefix/lib)
AC_UVAR_SET(includedir,    $prefix/include)
AC_UVAR_SET(oldincludedir, /usr/include)
AC_UVAR_SET(mandir,        $prefix/man/man1)
dnl AC_UVAR_SET(man1dir,       $prefix/man/man1)
dnl AC_UVAR_SET(man2dir,       $prefix/man/man2)
dnl AC_UVAR_SET(man3dir,       $prefix/man/man3)
dnl AC_UVAR_SET(man4dir,       $prefix/man/man4)
dnl AC_UVAR_SET(man5dir,       $prefix/man/man5)
dnl AC_UVAR_SET(man6dir,       $prefix/man/man6)
dnl AC_UVAR_SET(man7dir,       $prefix/man/man7)
dnl AC_UVAR_SET(man8dir,       $prefix/man/man8)
AC_UVAR_SET(manext,        .1)
dnl AC_UVAR_SET(man1ext,       .1)
dnl AC_UVAR_SET(man2ext,       .2)
dnl AC_UVAR_SET(man3ext,       .3)
dnl AC_UVAR_SET(man4ext,       .4)
dnl AC_UVAR_SET(man5ext,       .5)
dnl AC_UVAR_SET(man6ext,       .6)
dnl AC_UVAR_SET(man7ext,       .7)
dnl AC_UVAR_SET(man8ext,       .8)
AC_UVAR_VERB([dnl

#   Actual installation pathes, Part II [NO EDIT NECESSARY]
#
#   The following pathes are GenOpt pathes and
#   are additionally used by the Push installation.
#
#   These are not predefined by the GNU standard but
#   used by the author for a long time.
#
])dnl
AC_UVAR_SET(pkgdir,        $prefix)
AC_UVAR_SET(infodir,       $prefix/info)
AC_UVAR_SET(xaddir,        $prefix/xad)
AC_UVAR_SET(tmpdir,        /tmp)
AC_UVAR_OUTPUT


AC_CONFIGURE_PART(RESULT: Sourcefile Substitution)
AC_OUTPUT(dnl
Makefile dnl
t/Makefile dnl
config_sc.h dnl
,dnl
)dnl

echo ""
echo "Now please type 'make' to compile. Good luck."
echo ""

dnl ##EOF##
